src/objects/pse__Assignment__c.object
<CustomObject>
    <customHelpPage>pse__AssignmentAndScheduleHelp</customHelpPage>
    <description>Stores information about the allocation of a resource to a project and specifies the bill rate and cost rate for time entered. It references the schedule for a resource and, optionally, a project milestone.</description>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2287-This field is part of the OWF Process.</description>
        <label>Accepted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_History_Related_Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Notify_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - When set to true, the assignment notification workflow fires.</description>
        <label>Action: Notify Assignee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - True if work is allowed to be logged against the assignment.  False if not (i.e. the resource hasn’t completed required training).</description>
        <inlineHelpText>True if work is allowed to be logged against the assignment.  False if not (i.e. the resource hasn’t completed required training).</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Working_Time__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2287-This field is part of the OWF Process.</description>
        <formula>CASE(MOD( DATEVALUE(CreatedDate) - DATE(1985,6,24),7), 

  0 , CASE( MOD( pse__End_Date__c -  DATEVALUE(Accepted_Date__c),7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( pse__End_Date__c - DATEVALUE(Accepted_Date__c),7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( pse__End_Date__c  - DATEVALUE(Accepted_Date__c),7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( pse__End_Date__c - DATEVALUE(Accepted_Date__c),7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( pse__End_Date__c  - DATEVALUE(Accepted_Date__c),7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( pse__End_Date__c  - DATEVALUE(Accepted_Date__c),7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( pse__End_Date__c - DATEVALUE(Accepted_Date__c),7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( pse__End_Date__c - DATEVALUE(Accepted_Date__c))/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Working Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreement_Record_Id__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Record Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignment_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2249-This field is part of the OWF Process.</description>
        <label>Assignment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                    <default>true</default>
                    <label>Assignment</label>
                </value>
                <value>
                    <fullName>Days Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))</formula>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF - IQVIAPSA-3950 - Lookup to Bid History</description>
        <label>Bid History</label>
        <referenceTo>Bid_History__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Bid_History_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Number__c</fullName>
        <description>OWF-MC-ESPSFDCQI-4846-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Deliverable__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>TEXT(Bid_History__r.Budget_Deliverable__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Deliverable</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-3122-This field is part of the OWF Process.</description>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_for_Unit_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - checked, the resource will be unable to enter or edit deliverables or related tasks</description>
        <inlineHelpText>If checked, the resource will be unable to enter or edit deliverables or related tasks</inlineHelpText>
        <label>Closed for Unit Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-MC-ESPSFDCQI-2231-This field is part of the OWF Process.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assignments (Contact)</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimation_Effort__c</fullName>
        <description>OWF-ESPSFDCQI-2180-Initially copies the Suggested FTE of the related Resource Request. It can be edited by users.</description>
        <label>Estimation Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FTE__c</fullName>
        <description>IQVIAPSA-5714</description>
        <label>FTE</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Former_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-MC-ESPSFDCQI-3885-This field is part of the OWF Process.</description>
        <label>Former Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Assignments (Former Resource Request)</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2254-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_History_Related_Opportunity__r.Indication_List__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Triaged_Automatically__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OWF-ESPSFDCQI-4179-This field is part of the OWF Process.
The following field is to determine if the Assignment was created automatically or not.</description>
        <inlineHelpText>To determine if the Assignment was created automatically.</inlineHelpText>
        <label>Is Triaged Automatically?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <description>PSA-CLD-USNONE - The unique ID of the target record in the source system (for data migration).</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID of the target record in the source system (for data migration).</inlineHelpText>
        <label>Legacy ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lookup_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-MC-ESPSFDCQI-4846</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Match_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2289-This field is part of the OWF Process.</description>
        <label>Match Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2131</description>
        <formula>pse__Project__r.pse__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_History_Related_Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_History_Related_Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2131</description>
        <formula>pse__Project__r.pse__Opportunity__r.Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Original_Resource_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OWF-ESPSFDCQI-4740- This is a look up to the Resource Request that belonged to Assignment before it was rejected</description>
        <inlineHelpText>This is a look up to the Resource Request that belonged to the Assignment before it was rejected</inlineHelpText>
        <label>Original Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Rejected Assignments</relationshipLabel>
        <relationshipName>Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oversight_Dashboard_Role__c</fullName>
        <description>PSA-CLD-USNONE - permissions for Oversight DSpecifiesashboard</description>
        <inlineHelpText>permissions for Oversight DSpecifiesashboard</inlineHelpText>
        <label>Oversight Dashboard Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Publisher</fullName>
                </value>
                <value>
                    <fullName>Internal Read Only</fullName>
                    <isActive>false</isActive>
                    <label>Internal Read Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Manager_Current_User__c</fullName>
        <description>PSA-CLD-USNONE - True if the assignment’s resource’s manager is the logged in user.</description>
        <formula>$User.Id= pse__Resource__r.pse__Salesforce_User__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the assignment’s resource’s manager is the logged in user.</inlineHelpText>
        <label>PSA Manager = Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_PM_Current_User__c</fullName>
        <description>PSA-CLD-USNONE - True if the assignment’s project’s Project Manager  is the logged in user.</description>
        <formula>$User.Id= pse__Project__r.pse__Project_Manager__r.pse__Salesforce_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if the assignment’s project’s Project Manager  is the logged in user.</inlineHelpText>
        <label>PSA PM = Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Resource_User_Current_User__c</fullName>
        <description>PSA-CLD-USNONE - PSA-CLD-USNONE - True is resource on assignment is the same as the logged in user’s resource</description>
        <formula>$User.Id = pse__Resource__r.pse__Salesforce_User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True is resource on assignment is the same as the logged in user’s resource</inlineHelpText>
        <label>PSA Resource User = Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Preferred_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Service_Line_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-IQVIAPSA-2249-Tells system to set assignee as project service line lead.</description>
        <inlineHelpText>Checking this box will update the project Service Line Lead field to point to this assignment&apos;s resource.</inlineHelpText>
        <label>Primary Service Line Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Ranking__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>TEXT(Bid_History__r.RFP_Ranking__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Ranking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Analytics_country__c</fullName>
        <formula>TEXT(pse__Resource_Request__r.Regional_Analytics_Country__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Analytics country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2289-This field is part of the OWF Process.</description>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2289-This field is part of the OWF Process.</description>
        <label>Rejected Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Language_Skill_Set__c</fullName>
        <label>Resource Language Skill Set</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resource_Region__c</fullName>
        <description>Region of assigned Resource</description>
        <formula>pse__Resource__r.pse__Region__r.Name</formula>
        <inlineHelpText>Region of assigned Resource</inlineHelpText>
        <label>Resource Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <formula>pse__Resource_Request__r.Resource_Request_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Sub_Group__c</fullName>
        <description>OWF-MC-This field is part of the OWF Process.</description>
        <formula>TEXT(pse__Resource__r.Sub_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Sub-Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill_Certification_Type__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2253-This field is part of the OWF Process.</description>
        <formula>Text(pse__Resource_Request__r.pse__Primary_Skill_Certification__r.pse__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill / Certification Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_role__c</fullName>
        <description>PSA-CLD-USNONE - Used to store CEVA and Literature roles during data migration.  Consumed by OD.</description>
        <inlineHelpText>Used to store CEVA and Literature roles during data migration.  Consumed by OD.</inlineHelpText>
        <label>Sub-role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CEVA-Advisory Group Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-Clinical Reviewer</fullName>
                </value>
                <value>
                    <fullName>CEVA-Coordinator</fullName>
                </value>
                <value>
                    <fullName>CEVA-Core Lab Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-DMC Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-Endpoint Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-Image Review Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-Lead (back-up)</fullName>
                </value>
                <value>
                    <fullName>CEVA-Program Manager</fullName>
                </value>
                <value>
                    <fullName>CEVA-Programmer</fullName>
                </value>
                <value>
                    <fullName>CEVA-SMC Lead</fullName>
                </value>
                <value>
                    <fullName>CEVA-Technical Analyst</fullName>
                </value>
                <value>
                    <fullName>CEVA-Tester</fullName>
                </value>
                <value>
                    <fullName>CEVA-Test Plan Author</fullName>
                </value>
                <value>
                    <fullName>IQVIA-AdHoc Reporting Business Analyst</fullName>
                </value>
                <value>
                    <fullName>IQVIA-AEGIS Operations Business Analyst</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Case Management Process Team</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Case Quality Management</fullName>
                </value>
                <value>
                    <fullName>IQVIA-E2B Database Project Manager</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Global Business Unit ICSR Medical Oversight</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Global Safety Officer</fullName>
                </value>
                <value>
                    <fullName>IQVIA GSO LM</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Intake Oversight</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Literature Surveillance Expert</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Periodic Planning Expert</fullName>
                </value>
                <value>
                    <fullName>IQVIA Primary GSO</fullName>
                </value>
                <value>
                    <fullName>IQVIA Primary PV Scientist</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Project Communication &amp; Interface Specialist</fullName>
                </value>
                <value>
                    <fullName>IQVIA-Project Manager</fullName>
                </value>
                <value>
                    <fullName>IQVIA-PV Dossier Management Associate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subgroup_Name__c</fullName> 
        <description>OWF-MC-ESPSFDCQI-4846-This field is part of the OWF Process.</description>
        <formula>TEXT( pse__Resource_Request__r.SubGroup__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subgroup Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_FTE__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2174-This field is part of the OWF Process.</description>
        <formula>pse__Resource_Request__r.Suggested_FTE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested FTE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therapy_Area__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2254-This field is part of the OWF Process.</description>
        <formula>Bid_History__r.Bid_History_Related_Opportunity__r.Therapy_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapy Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PSA-CLD-USNONE - True if the resource has completed the training required to enter work on this assignment</description>
        <inlineHelpText>True if the resource has completed the training required to enter work on this assignment</inlineHelpText>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Triage_Comments__c</fullName>
        <description>OWF-MC-ESPSFDCQI-2190-This field is part of the OWF Process.</description>
        <label>Triage Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger Email Notification if this Checkbox is true</description>
        <label>Trigger Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>psaws__Is_Resource_Current_User__c</fullName>
        <description>The formula field checks whether the resource is a current user or not.</description>
        <formula>pse__Resource__r.pse__Salesforce_User__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Resource Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__API_Assignment_Correlation_Id__c</fullName>
        <label>API Assignment Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_EVA_Hours_From_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</description>
        <inlineHelpText>If checked on save, refreshes Actual Time information on Est Vs Actuals records from Timecards associated with Assignment.</inlineHelpText>
        <label>Action: Refresh EVA Hours From Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Expense_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from expenses associated with the assignment.</description>
        <inlineHelpText>If checked on save, recalculates information from expenses associated with the assignment.</inlineHelpText>
        <label>Action: Refresh Expense Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Hours_From_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</description>
        <inlineHelpText>If checked on save, refreshes Scheduled Hours and Est Vs Actuals records related to Assignment Schedule.</inlineHelpText>
        <label>Action: Refresh Hours From Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Refresh_Timecard_Rollups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked on save, recalculates information from timecards associated with the assignment.</description>
        <inlineHelpText>If checked on save, recalculates information from timecards associated with the assignment.</inlineHelpText>
        <label>Action: Refresh Timecard Roll-Ups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Action_Sync_With_External_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to sync assignment with external calendar.</description>
        <inlineHelpText>If selected on save, the assignment is synced with the external calendar.</inlineHelpText>
        <label>Action: Sync with External Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes_Last_Updated__c</fullName>
        <description>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</description>
        <inlineHelpText>Date-time of most recent insert/update/delete/undelete on the Assignment Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Daily_Notes__c</fullName>
        <description>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</description>
        <inlineHelpText>Shows concatenated notes from Assignment&apos;s Daily Notes child records.</inlineHelpText>
        <label>Assignment Daily Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_Number__c</fullName>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Currency_Code__c</fullName>
        <label>Average Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate_Number__c</fullName>
        <label>Average Cost Rate Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Average_Cost_Rate__c</fullName>
        <formula>pse__Average_Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(pse__Average_Cost_Rate_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence_Number__c</fullName>
        <description>Not intended for display. Needed to convert the autonumber to a numeric value for sorting.</description>
        <formula>Value(pse__Batch_Sequence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Batch Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Sequence__c</fullName>
        <description>An auto-number used for batch processing assignments. Not intended for display.</description>
        <displayFormat>{0}</displayFormat>
        <label>Batch Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>pse__Bill_Rate__c</fullName>
        <inlineHelpText>Enter the hourly bill rate for the resource</inlineHelpText>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Amount_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Amount Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_In_Financials__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days In Financials</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Days_Submitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billable Days Submitted</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses In Financials</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Expenses_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Expenses Submitted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_In_Financials__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours In Financials</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Hours_Submitted__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Billable Hours Submitted</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Expense_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Expense Reports and Expenses may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Expense Entry.</description>
        <label>Closed for Expense Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that Timecards may no longer be entered for this Assignment.  Is checked automatically when the Assignment&apos;s Project is Closed for Time Entry.</description>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate_Currency_Code__c</fullName>
        <label>Cost Rate Currency Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Cost_Rate__c</fullName>
        <formula>pse__Cost_Rate_Currency_Code__c &amp; &apos; &apos; &amp; TEXT(ROUND(pse__Cost_Rate_Amount__c,2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Rate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Bill_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Cost_Rate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cost Rate is Daily Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Daily_Timecard_Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Daily Timecard Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Assignment_to_Sync_Jira_Worklog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if this assignment is used for syncing time from Jira.</description>
        <inlineHelpText>Determines if this assignment is used for syncing Jira work logs with PSA timecards for the project and resource. Only one assignment can be used for syncing time from Jira for a single project and resource.</inlineHelpText>
        <label>Use for Syncing Time from Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>